<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fefcfb"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/top4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/titleadd"
                android:textAlignment="center"
                android:textColor="#118AB2"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:text="@string/code"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtcode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextstyle"
                android:fontFamily="@font/poppins"
                android:hint="@string/edtcode"
                android:textColor="@color/edttext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:tag="nrp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:text="@string/name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtname"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextstyle"
                android:fontFamily="@font/poppins"
                android:hint="@string/edtname"
                android:textColor="@color/edttext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:tag="nrp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:text="@string/subject"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtclass"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextstyle"
                android:fontFamily="@font/poppins"
                android:hint="@string/edtsubject"
                android:textColor="@color/edttext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:tag="nrp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:text="@string/time"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edttime"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextstyle"
                android:fontFamily="@font/poppins"
                android:hint="@string/edttime"
                android:textColor="@color/edttext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:tag="nrp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnsend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:paddingVertical="7dp"
                android:backgroundTint="@color/dark"
                android:fontFamily="@font/poppins_bold"
                android:onClick=""
                android:text="@string/add"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>