<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fefcfb"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Welcome"
            android:textColor="#118AB2"
            android:textSize="34sp"></TextView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp"
            android:text="@string/nrp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nrp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstyle"
            android:fontFamily="@font/poppins"
            android:hint="@string/edtnrp"
            android:textColor="@color/edttext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:tag="nrp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pass"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstyle"
            android:fontFamily="@font/poppins"
            android:textColor="@color/edttext"
            android:hint="@string/edtpass"
            android:importantForAutofill="no"
            android:inputType="text"
            android:tag="nama"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:paddingVertical="7dp"
            android:backgroundTint="@color/dark"
            android:fontFamily="@font/poppins_bold"
            android:onClick=""
            android:text="@string/login"
            android:textSize="18sp" />

<<<<<<< Updated upstream
    </LinearLayout>
=======
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="Welcome\nHere"
                android:textColor="#118AB2"
                android:textSize="34sp"></TextView>

            <Button
                android:id="@+id/btnattend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="7dp"
                android:backgroundTint="@color/blue"
                android:textColor="@color/dark"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/presensi"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnhistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:paddingVertical="7dp"
                android:backgroundTint="@color/purple"
                android:textColor="@color/dark"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/history"
                android:textSize="18sp" />


        </LinearLayout>
>>>>>>> Stashed changes
    </LinearLayout>
</ScrollView>