<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Preview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/top3" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/titlesend"
                android:textAlignment="center"
                android:textColor="#118AB2"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="415dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>

<!--            <Switch-->
<!--                android:id="@+id/switch1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="20dp"-->
<!--                android:text="Wear Mask?"-->
<!--                android:fontFamily="@font/poppins"-->
<!--                android:textSize="15sp"-->
<!--                android:checked="true"-->
<!--                android:textOff="OFF"-->
<!--                android:textOn="ON"-->
<!--                android:textColor="@color/dark"/>-->

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btntake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:paddingVertical="7dp"
                android:backgroundTint="@color/back"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/take"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnnext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:paddingVertical="7dp"
                android:backgroundTint="@color/dark"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/next"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>